feat: add CORS config